gitops/kustomize/demo-stack/argocd-server-rollout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  template:
    metadata:
      annotations:
        demo-stack.argocd-server-config-hash: "server-insecure-true"
