gitops/kustomize/demo-stack/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-stack-postgres
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/name: demo-stack
    app.kubernetes.io/component: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: demo-stack
    app.kubernetes.io/component: postgres
