gitops/kustomize/demo-stack/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-public
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: demo-stack
    app.kubernetes.io/component: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.yolo.scapegoat.dev
      secretName: argocd-server-public-tls
  rules:
    - host: argocd.yolo.scapegoat.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
